alignment fix

--- a/src/components/PriceTag/styles.module.scss
+++ b/src/components/PriceTag/styles.module.scss
@@ -6,6 +6,7 @@
   margin-block-end: 1.8rem;
   background-color: $priceTagBG;
   border-radius: 1.6rem;
+  padding-inline-start: 2.8rem;
 
   color: $mainBlue;
   display: flex;
